--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "bootstrap-datepicker": "^1.7.1",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "long": "^3.2.0",
-    "jszip": "Stuk/jszip#^3.1.5"
+    "jszip": "Stuk/jszip#^3.1.5",
+    "StickyTableHeaders": "^0.1.24"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
